Drop Scala 2.11 / Spark 2.4 support and add Spark 4 compatibility
- Remove Scala 2.11 source set, build profiles and version-specific dependencies
- Add `SparkCompatUtils` for reflection-based `Column` <-> `Expression` conversions across Spark 3 and 4
- Update Scala 2.13 to 2.13.18 with Spark 4.1.2, add Delta/Iceberg/Abris versions for Spark 4
- Add JVM options required by Spark 4 tests
- Bump version to 1.15.0-SNAPSHOT